# optimized-fields

./: BENCHMARKS.md  Cargo.toml  README.md
benches/: fp31.rs  fp64.rs
criterion/Fp=18446744069414584321/Addition/report/: index.html
criterion/Fp=18446744069414584321/Deserialize Compressed Unchecked/report/: index.html
criterion/Fp=18446744069414584321/Deserialize Compressed/report/: index.html
criterion/Fp=18446744069414584321/Deserialize Uncompressed Unchecked/report/: index.html
criterion/Fp=18446744069414584321/Deserialize Uncompressed/report/: index.html
criterion/Fp=18446744069414584321/Double/report/: index.html
criterion/Fp=18446744069414584321/From BigInt/report/: index.html
criterion/Fp=18446744069414584321/Generic/report/: index.html
criterion/Fp=18446744069414584321/Into BigInt/report/: index.html
criterion/Fp=18446744069414584321/Inverse/report/: index.html
criterion/Fp=18446744069414584321/Legendre for QR/report/: index.html
criterion/Fp=18446744069414584321/Multiplication/report/: index.html
criterion/Fp=18446744069414584321/Naive sum of products of size 2/report/: index.html
criterion/Fp=18446744069414584321/Negation/report/: index.html
criterion/Fp=18446744069414584321/Serialize Compressed/report/: index.html
criterion/Fp=18446744069414584321/Serialize Uncompressed/report/: index.html
criterion/Fp=18446744069414584321/Specialized/report/: index.html
criterion/Fp=18446744069414584321/Square Root for QR/report/: index.html
criterion/Fp=18446744069414584321/Square/report/: index.html
criterion/Fp=18446744069414584321/Subtraction/report/: index.html
criterion/Fp=18446744069414584321/Sum of products of size 2/report/: index.html
criterion/Fp=18446744069414584321/report/: index.html
criterion/report/: index.html
criterion/reports/: index.html
criterion/reports/Fp=18446744069414584321/: index.html
criterion/reports/Fp=18446744069414584321/Addition/: index.html
criterion/reports/Fp=18446744069414584321/Deserialize Compressed/: index.html
criterion/reports/Fp=18446744069414584321/Deserialize Compressed Unchecked/: index.html
criterion/reports/Fp=18446744069414584321/Deserialize Uncompressed/: index.html
criterion/reports/Fp=18446744069414584321/Deserialize Uncompressed Unchecked/: index.html
criterion/reports/Fp=18446744069414584321/Double/: index.html
criterion/reports/Fp=18446744069414584321/From BigInt/: index.html
criterion/reports/Fp=18446744069414584321/Generic/: index.html
criterion/reports/Fp=18446744069414584321/Into BigInt/: index.html
src/: fp31.rs  fp64.rs  fp_u64.rs  lib.rs  macros.rs  main.rs
(+393 files in other folders)
