[package]
name = "ark-ff-optimized"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
description = "Optimized field implementations that outperform the generic field implementations in arkworks"
repository = "https://github.com/andrewmilson/optimized-fields"
homepage = "https://github.com/andrewmilson/optimized-fields"
readme = "README.md"
license = "MIT"

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }

[dev-dependencies]
ark-algebra-test-templates = { git = "https://github.com/arkworks-rs/algebra" }
ark-algebra-bench-templates = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std" }

[features]
asm = ["ark-ff/asm"]

[[bench]]
name = "fp64"
path = "benches/fp64.rs"
harness = false