[package]
name = "ark-ff-optimized"
version = "0.4.0"
edition = "2021"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
description = "Optimized field implementations that outperform the generic field implementations in arkworks"
repository = "https://github.com/andrewmilson/optimized-fields"
homepage = "https://github.com/andrewmilson/optimized-fields"
keywords = ["cryptography", "finite-fields"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"

[dependencies]
ark-ff = "0.4.0"

[dev-dependencies]
ark-algebra-test-templates = "0.4.0"
ark-algebra-bench-templates = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"

[features]
asm = ["ark-ff/asm"]

[[bench]]
name = "fp64"
path = "benches/fp64.rs"
harness = false