[package]
name = "ark-ff-optimized"
version = "0.4.1"
edition = "2021"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
description = "Optimized field implementations that outperform the generic field implementations in arkworks"
repository = "https://github.com/andrewmilson/optimized-fields"
homepage = "https://github.com/andrewmilson/optimized-fields"
keywords = ["cryptography", "finite-fields"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"

[dependencies]
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
zeroize = "1"
num-bigint = "0.4"

[dev-dependencies]
ark-algebra-test-templates = "0.4"
ark-algebra-bench-templates = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"

[features]
asm = ["ark-ff/asm"]
std = []

[[bench]]
name = "fp64"
path = "benches/fp64.rs"
harness = false

[[bench]]
name = "fp31"
path = "benches/fp31.rs"
harness = false